# shrink

./: README.md  quickcheck-shrink.cabal  shrink.cabal
Test/: Shrink.hs
Test/QuickCheck/: Shrink.hs
