name:                quickcheck-shrink
version:             0.1.0.0
synopsis:            Utilities for defining QuickCheck shrinks
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) 2013 Craig Roche
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Test.QuickCheck.Shrink
  -- other-modules:       
  build-depends:       base ==4.6.*, transformers ==0.3.*, QuickCheck ==2.6.*
